Base de datos seteada, y mas arreglos